--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -150,13 +150,13 @@
     },
     {
      "ename": "OverflowError",
-     "evalue": "(34, 'Numerical result out of range')",
+     "evalue": "(34, 'Result too large')",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOverflowError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m12.3456789\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m250\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241;43m12.3456789\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m350\u001b[39;49m)\n",
-      "\u001b[0;31mOverflowError\u001b[0m: (34, 'Numerical result out of range')"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOverflowError\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m12.3456789\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m250\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241;43m12.3456789\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m350\u001b[39;49m)\n",
+      "\u001b[1;31mOverflowError\u001b[0m: (34, 'Result too large')"
      ]
     }
    ],
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1733,6 +1733,8 @@
         "SVG": "Other",
         "bash": "Other",
         "capture": "ExecutionMagics",
+        "cmd": "Other",
+        "code_wrap": "ExecutionMagics",
         "debug": "ExecutionMagics",
         "file": "Other",
         "html": "DisplayMagics",
@@ -1764,18 +1766,21 @@
         "automagic": "AutoMagics",
         "autosave": "KernelMagics",
         "bookmark": "OSMagics",
-        "cat": "Other",
         "cd": "OSMagics",
         "clear": "KernelMagics",
+        "cls": "KernelMagics",
+        "code_wrap": "ExecutionMagics",
         "colors": "BasicMagics",
         "conda": "PackagingMagics",
         "config": "ConfigMagics",
         "connect_info": "KernelMagics",
-        "cp": "Other",
+        "copy": "Other",
+        "ddir": "Other",
         "debug": "ExecutionMagics",
         "dhist": "OSMagics",
         "dirs": "OSMagics",
         "doctest_mode": "BasicMagics",
+        "echo": "Other",
         "ed": "Other",
         "edit": "KernelMagics",
         "env": "OSMagics",
@@ -1785,9 +1790,6 @@
         "killbgscripts": "ScriptMagics",
         "ldir": "Other",
         "less": "KernelMagics",
-        "lf": "Other",
-        "lk": "Other",
-        "ll": "Other",
         "load": "CodeMagics",
         "load_ext": "ExtensionMagics",
         "loadpy": "CodeMagics",
@@ -1798,14 +1800,13 @@
         "logstop": "LoggingMagics",
         "ls": "Other",
         "lsmagic": "BasicMagics",
-        "lx": "Other",
         "macro": "ExecutionMagics",
         "magic": "BasicMagics",
-        "man": "KernelMagics",
+        "mamba": "PackagingMagics",
         "matplotlib": "PylabMagics",
+        "micromamba": "PackagingMagics",
         "mkdir": "Other",
         "more": "KernelMagics",
-        "mv": "Other",
         "notebook": "BasicMagics",
         "page": "BasicMagics",
         "pastebin": "CodeMagics",
@@ -1831,11 +1832,11 @@
         "recall": "HistoryMagics",
         "rehashx": "OSMagics",
         "reload_ext": "ExtensionMagics",
+        "ren": "Other",
         "rep": "Other",
         "rerun": "HistoryMagics",
         "reset": "NamespaceMagics",
         "reset_selective": "NamespaceMagics",
-        "rm": "Other",
         "rmdir": "Other",
         "run": "ExecutionMagics",
         "save": "CodeMagics",
@@ -1849,6 +1850,7 @@
         "timeit": "ExecutionMagics",
         "unalias": "OSMagics",
         "unload_ext": "ExtensionMagics",
+        "uv": "PackagingMagics",
         "who": "NamespaceMagics",
         "who_ls": "NamespaceMagics",
         "whos": "NamespaceMagics",
@@ -1858,15 +1860,15 @@
       },
       "text/plain": [
        "Available line magics:\n",
-       "%alias  %alias_magic  %autoawait  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %conda  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %pip  %popd  %pprint  %precision  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
+       "%alias  %alias_magic  %autoawait  %autocall  %automagic  %autosave  %bookmark  %cd  %clear  %cls  %code_wrap  %colors  %conda  %config  %connect_info  %copy  %ddir  %debug  %dhist  %dirs  %doctest_mode  %echo  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %macro  %magic  %mamba  %matplotlib  %micromamba  %mkdir  %more  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %pip  %popd  %pprint  %precision  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %ren  %rep  %rerun  %reset  %reset_selective  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %uv  %who  %who_ls  %whos  %xdel  %xmode\n",
        "\n",
        "Available cell magics:\n",
-       "%%!  %%HTML  %%SVG  %%bash  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
+       "%%!  %%HTML  %%SVG  %%bash  %%capture  %%cmd  %%code_wrap  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
        "\n",
        "Automagic is ON, % prefix IS NOT needed for line magics."
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,23 +1879,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=!pwd"
+    "a=%pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/Arrow/newgitnest/ScientificPython_diploma24']\n"
+      "c:\\Users\\ASUS\\Documents\\GitHub\\ScientificPython_diploma25\n"
      ]
     }
    ],
@@ -1932,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1940,19 +1942,19 @@
      "output_type": "stream",
      "text": [
       "Selected Jupyter core packages...\n",
-      "IPython          : 8.8.0\n",
-      "ipykernel        : 6.19.2\n",
-      "ipywidgets       : 8.1.0\n",
-      "jupyter_client   : 7.4.8\n",
-      "jupyter_core     : 5.1.1\n",
-      "jupyter_server   : 1.23.4\n",
-      "jupyterlab       : 3.5.0\n",
-      "nbclient         : 0.5.13\n",
-      "nbconvert        : 6.5.4\n",
-      "nbformat         : 5.7.0\n",
-      "notebook         : 6.5.2\n",
+      "IPython          : 8.31.0\n",
+      "ipykernel        : 6.29.5\n",
+      "ipywidgets       : not installed\n",
+      "jupyter_client   : 8.6.3\n",
+      "jupyter_core     : 5.7.2\n",
+      "jupyter_server   : 2.15.0\n",
+      "jupyterlab       : 4.3.4\n",
+      "nbclient         : 0.10.2\n",
+      "nbconvert        : 7.16.5\n",
+      "nbformat         : 5.10.4\n",
+      "notebook         : 7.3.2\n",
       "qtconsole        : not installed\n",
-      "traitlets        : 5.7.1\n"
+      "traitlets        : 5.14.3\n"
      ]
     }
    ],
@@ -1962,47 +1964,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable         Type       Data/Info\n",
-      "-------------------------------------\n",
-      "a                SList      ['/home/Arrow/newgitnest/<...>entificPython_diploma24']\n",
-      "aa               int        56\n",
-      "alln             set        {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
-      "b                int        1\n",
-      "bb               int        34\n",
-      "c                int        77\n",
-      "d                complex    (8+2.1j)\n",
-      "e                str        meow\n",
-      "el               int        1\n",
-      "empty            set        set()\n",
-      "evn              set        {0, 2, 4, 6, 8, 10}\n",
-      "f                int        34\n",
-      "g                list       n=2\n",
-      "hjk              int        1\n",
-      "i                int        3\n",
-      "j                int        1234567890129874897238748234799848932749827\n",
-      "l                list       n=2\n",
-      "list_of_things   list       n=7\n",
-      "ll               list       n=3\n",
-      "lr               list       n=20\n",
-      "ls               list       n=7\n",
-      "m                list       n=4\n",
-      "oddn             set        {1, 3, 5, 7, 9}\n",
-      "s                set        set()\n",
-      "set1             set        {1, 2, 3, 4, 5, 7}\n",
-      "set2             set        {1, 3}\n",
-      "t                tuple      n=3\n",
-      "v                str        meow\n",
-      "var              int        7\n",
-      "x                int        1\n",
-      "y                int        21\n",
-      "z                int        77\n"
+      "Variable   Type        Data/Info\n",
+      "--------------------------------\n",
+      "a          int         343\n",
+      "b          float       7.3\n",
+      "c          float       4.0\n",
+      "d          complex     (8+2.1j)\n",
+      "e          bool        True\n",
+      "f          int         34\n",
+      "g          NoneType    None\n",
+      "i          int         123456789012345678901234567890\n",
+      "j          int         1234567890129874897238748234799848932749827\n"
      ]
     }
    ],
@@ -2120,21 +2099,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "write your name: Cat\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello,  Cat\n"
+      "hello,  1\n"
      ]
     }
    ],
@@ -2150,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2207,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,9 +2192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8683317618811886495518194401280000000"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "factorial(33)"
    ]
@@ -2244,9 +2227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "parameter without a default follows parameter with a default (3089624087.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[24], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    def f(a,b=0,c):\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m parameter without a default follows parameter with a default\n"
+     ]
+    }
+   ],
    "source": [
     "def f(a,b=0,c):\n",
     "    print(a+1)\n",
@@ -2264,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2288,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2337,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2372,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2381,7 +2373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2382,7 @@
        "function"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2401,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2402,7 @@
        "6"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,9 +2495,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env_2024]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-env_2024-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2517,7 +2509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
