--- a/Exercises-gameoflife.ipynb
+++ b/Exercises-gameoflife.ipynb
@@ -5,7 +5,7 @@
    "id": "567e2e56-b9fa-49ff-b672-a040cc537818",
    "metadata": {},
    "source": [
-    "### **Exercise: Game of Life (no xarray, just python practice)**\n",
+    "### **Exercise: Game of Life**\n",
     "\n",
     "Implement [Conway's game of life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life) using numpy array to hold data.\n",
     "Neighbours are defined as adjacent cells (all the 8).\n",
@@ -59,9 +59,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:env_2024] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-env_2024-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -73,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
